@@ -43,139 +43,143 @@
  * $Id$
  */
 
-
-import java.io.*;
-import org.exolab.castor.xml.ClassDescriptorResolver;
-import org.exolab.castor.xml.Unmarshaller;
-import org.exolab.castor.xml.Marshaller;
-import org.exolab.castor.xml.MarshalException;
-
 import java.beans.PropertyChangeEvent;
 import java.beans.PropertyChangeListener;
+import java.io.FileReader;
+import java.io.FileWriter;
 
-//-- import for generated classes
-import test.*;
-import test.business.*;
-
-import org.exolab.castor.types.Duration;
 import org.exolab.castor.types.Date;
+import org.exolab.castor.types.Duration;
 import org.exolab.castor.types.Time;
 
+import test.AddressElement;
+import test.MyInvoice;
+import test.ShipTo;
+import test.ShippingDate;
+import test.ShippingMethod;
+import test.business.Item;
+
 /**
- * Test class for Castor test suite
+ * Example class that uses classes generated by the Castor source generator to
+ * unmarshal and marshal an XML document.
+ * 
  * @author <a href="mailto:kvisco@intalio.com">Keith Visco</a>
  * @version $Revision$ $Date: 2003-03-03 00:05:44 -0700 (Mon, 03 Mar 2003) $
-**/
+ */
 public class InvoiceTest implements PropertyChangeListener {
-
 
     public void propertyChange(PropertyChangeEvent event) {
         System.out.println("PropertyChange: " + event.getPropertyName());
-    } //-- propertyChange
+    } // -- propertyChange
 
     public static void main(String[] args) {
-	try {
+        try {
+            System.out.println("Unmarshalling Invoice");
 
+            MyInvoice invoice = null;
+            invoice = MyInvoice.unmarshal(new FileReader("invoice1.xml"));
 
-	    System.out.println("Unmarshalling Invoice");
+            System.out.println();
+            System.out.println("unmarshalled...performing tests...");
+            System.out.println();
 
-	    MyInvoice invoice = null;
-	    invoice = MyInvoice.unmarshal(new FileReader("invoice1.xml"));
+            // -- Display unmarshalled address to the screen
+            System.out.println("Invoice");
+            System.out.println("-------");
+            System.out.println();
+            System.out.println("Ship To:");
 
-	    System.out.println();
-	    System.out.println("unmarshalled...performing tests...");
-	    System.out.println();
+            ShipTo shipTo = invoice.getShipTo();
 
-        //-- Display unmarshalled address to the screen
-        System.out.println("Invoice");
-        System.out.println("-------");
-        System.out.println();
-        System.out.println("Ship To:");
+            System.out.println("   " + shipTo.getCustomer().getName());
 
-        ShipTo shipTo = invoice.getShipTo();
+            AddressElement address = shipTo.getCustomer().getAddressElement();
 
-        System.out.println("   " + shipTo.getCustomer().getName());
+            System.out.println("   " + address.getStreet1());
+            String street2 = address.getSecondStreet();
+            if (street2 != null) {
+                System.out.println("   " + street2);
+            }
+            System.out.print("   " + address.getCity());
+            System.out.print(", " + address.getState());
+            System.out.println("  " + address.getZipCode());
 
-        AddressElement address = shipTo.getCustomer().getAddressElement();
+            System.out.println("   " + shipTo.getCustomer().getPhone());
 
-	    System.out.println("   " + address.getStreet1());
-	    String street2 = address.getSecondStreet();
-	    if (street2 != null)
-	        System.out.println("   " + street2);
-	    System.out.print("   " + address.getCity());
-	    System.out.print(", " + address.getState());
-	    System.out.println("  " + address.getZipCode());
+            System.out.println();
+            System.out.println("Item:");
+            Item[] item = invoice.getItem();
+            for (int i = 0; i < item.length; i++) {
+                String result = item[i].getInStock() ? "yes" : "no";
+                System.out.println("  In Stock: " + result);
+                System.out.println("  Category:" + item[i].getCategory());
+                System.out.println("  ID:" + item[i].getId());
+                System.out.println("  Quantity:" + item[i].getQuantity());
+                System.out.println("  Price:" + item[i].getSpecialPrice());
+            }
+            System.out.println();
+            System.out.println("Shipping Method:");
 
-        System.out.println("   "+shipTo.getCustomer().getPhone());
+            ShippingMethod method = invoice.getShippingMethod();
+            System.out.print("   " + method.getCarrier());
+            System.out.println("  " + method.getOption());
+            System.out.print("   Estimated Time: ");
 
-	    System.out.println();
-        System.out.println("Item:");
-        Item[] item = invoice.getItem();
-        for (int i=0; i<item.length; i++) {
-                String result = item[i].getInStock()? "yes":"no";
-                System.out.println("  In Stock: "+result);
-                System.out.println("  Category:"+item[i].getCategory());
-                System.out.println("  ID:"+item[i].getId());
-                System.out.println("  Quantity:"+item[i].getQuantity());
-                System.out.println("  Price:"+item[i].getSpecialPrice());
+            Duration duration = method.getEstimatedDelivery();
+
+            int years = duration.getYear();
+            int months = duration.getMonth();
+            int days = duration.getDay();
+            int hours = duration.getHour();
+
+            boolean printComma = false;
+
+            if (years > 0) {
+                System.out.print(years + " year(s)");
+                printComma = true;
+            }
+
+            if (months > 0) {
+                if (printComma) {
+                    System.out.print(", ");
+                }
+                System.out.print(months + " month(s)");
+                printComma = true;
+            }
+
+            if (days > 0) {
+                if (printComma) {
+                    System.out.print(", ");
+                }
+                System.out.print(days + " day(s)");
+                printComma = true;
+            }
+
+            if (hours > 0) {
+                if (printComma) {
+                    System.out.print(", ");
+                }
+                System.out.print(hours + " hour(s)");
+            }
+
+            System.out.println();
+
+            System.out.println();
+            System.out.println("Shipping Date:");
+            ShippingDate date = invoice.getShippingDate();
+            Date day = date.getDate();
+            Time time = date.getTime();
+
+            System.out.println("   Date :" + day.toString());
+            System.out.println("   Time :" + time.toString());
+            System.out.println();
+
+            System.out.println("----End of Invoice----");
+            invoice.marshal(new FileWriter("invoice2.xml"));
+
+        } catch (Exception e) {
+            e.printStackTrace();
         }
-        System.out.println();
-	    System.out.println("Shipping Method:");
-
-	    ShippingMethod method = invoice.getShippingMethod();
-	    System.out.print("   " + method.getCarrier());
-	    System.out.println("  " + method.getOption());
-	    System.out.print("   Estimated Time: ");
-
-	    Duration duration = method.getEstimatedDelivery();
-
-	    int years  = duration.getYear();
-	    int months = duration.getMonth();
-	    int days   = duration.getDay();
-	    int hours  = duration.getHour();
-
-	    boolean printComma = false;
-
-	    if (years > 0) {
-	        System.out.print(years + " year(s)");
-	        printComma = true;
-	    }
-
-	    if (months > 0) {
-	        if (printComma) System.out.print(", ");
-	        System.out.print(months + " month(s)");
-	        printComma = true;
-	    }
-
-	    if (days > 0) {
-	        if (printComma) System.out.print(", ");
-	        System.out.print(days + " day(s)");
-	        printComma = true;
-	    }
-
-	    if (hours > 0) {
-	        if (printComma) System.out.print(", ");
-	        System.out.print(hours + " hour(s)");
-	    }
-
-        System.out.println();
-
-        System.out.println();
-	    System.out.println("Shipping Date:");
-        ShippingDate date = invoice.getShippingDate();
-        Date day = date.getDate();
-        Time time = date.getTime();
-
-        System.out.println("   Date :"+day.toString());
-        System.out.println("   Time :"+time.toString());
-	    System.out.println();
-
-        System.out.println("----End of Invoice----");
-        invoice.marshal(new FileWriter("invoice2.xml"));
-
-    } catch (Exception e) {
-	    e.printStackTrace();
-	}
 
     }
 
